--- a/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
+++ b/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
@@ -591,9 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt-3.5-turbo\n"
+     ]
+    }
+   ],
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
     "from langchain_openai import ChatOpenAI\n",
@@ -635,10 +643,10 @@
     "print(llm.model_name)\n",
     "\n",
     "# 도구 리스트\n",
-    "tools = [calculate_compound_interest, calculate_tax, get_weekday]\n",
+    "tools_list = [calculate_compound_interest, calculate_tax, get_weekday]\n",
     "\n",
     "# ReAct 에이전트 생성\n",
-    "agent = create_react_agent(llm, tools)"
+    "agent = create_react_agent(model=llm, tools=tools_list)"
    ]
   },
   {
@@ -696,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -708,89 +716,102 @@
       "1억원을 연 5% 복리로 10년 동안 예금하면 얼마가 될까?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  add2 (call_8CCBAtiq91idVPqDwycs7gQ7)\n",
-      " Call ID: call_8CCBAtiq91idVPqDwycs7gQ7\n",
+      "  calculate_compound_interest (call_7Snrj0xWbze4uvADumJ4CFUT)\n",
+      " Call ID: call_7Snrj0xWbze4uvADumJ4CFUT\n",
       "  Args:\n",
-      "    a: 100000000\n",
-      "    b: 100000000\n",
+      "    principal: 100000000\n",
+      "    rate: 0.05\n",
+      "    years: 10\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: add2\n",
+      "Name: calculate_compound_interest\n",
       "\n",
-      "200000000\n",
+      "10년 후 원리금: 100,501,127원, 이자: 501,127원\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "1억원을 연 5% 복리로 10년 동안 예금하면 2억원이 될 것입니다.\n",
+      "1억원을 연 5% 복리로 10년 동안 예금하면 10년 후에 100,501,127원이 됩니다.\n",
+      "Tool Calls:\n",
+      "  calculate_tax (call_TzVsMp0JToaAdGPDJykrIhnp)\n",
+      " Call ID: call_TzVsMp0JToaAdGPDJykrIhnp\n",
+      "  Args:\n",
+      "    income: 100501127\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: calculate_tax\n",
+      "\n",
+      "예상 세액: 20,275,394원, 세후 소득: 80,225,733원\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "이에 대한 예상 간이 세액은 20,275,394원이며, 세후 소득은 80,225,733원입니다.\n",
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "연소득 5천만원일 때 내야 할 세금은 얼마야?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  add2 (call_nr2YQFq5ePXcAjeTKInPYob9)\n",
-      " Call ID: call_nr2YQFq5ePXcAjeTKInPYob9\n",
+      "  calculate_tax (call_eHSCWD4p81S9u0a1Mdp1ZWY6)\n",
+      " Call ID: call_eHSCWD4p81S9u0a1Mdp1ZWY6\n",
       "  Args:\n",
-      "    a: 50000000\n",
-      "    b: 50000000\n",
+      "    income: 50000000\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: add2\n",
+      "Name: calculate_tax\n",
       "\n",
-      "100000000\n",
+      "예상 세액: 6,780,000원, 세후 소득: 43,220,000원\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "연소득 5천만원일 때 내야 할 세금은 1억원입니다.\n",
+      "연 소득 5천만원일 때 내야 할 예상 세금은 6,780,000원이며, 세후 소득은 43,220,000원입니다.\n",
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "2024-12-25은 무슨 요일이야?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  add2 (call_NFdXuHhGIKCpnPy3oR5Il33c)\n",
-      " Call ID: call_NFdXuHhGIKCpnPy3oR5Il33c\n",
+      "  get_weekday (call_3EUtxji0XNAc0f1jild9nAA6)\n",
+      " Call ID: call_3EUtxji0XNAc0f1jild9nAA6\n",
       "  Args:\n",
-      "    a: 1\n",
-      "    b: 2\n",
+      "    date_str: 2024-12-25\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: add2\n",
+      "Name: get_weekday\n",
       "\n",
-      "3\n",
+      "2024-12-25은 수요일입니다.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "2024-12-25은 화요일이에요.\n",
+      "2024년 12월 25일은 수요일입니다.\n",
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "연소득 8천만원일 때 세금을 계산하고, 남은 돈을 연 4% 복리로 5년간 예금하면 얼마가 돼?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  add2 (call_vofuk7eEu27ZNtSOCAu19b5d)\n",
-      " Call ID: call_vofuk7eEu27ZNtSOCAu19b5d\n",
+      "  calculate_tax (call_IzJkZbr3KUuJj3uGX28VRJEz)\n",
+      " Call ID: call_IzJkZbr3KUuJj3uGX28VRJEz\n",
       "  Args:\n",
-      "    a: 80000000\n",
-      "    b: 80000000\n",
+      "    income: 80000000\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: add2\n",
+      "Name: calculate_tax\n",
       "\n",
-      "160000000\n",
+      "예상 세액: 13,980,000원, 세후 소득: 66,020,000원\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  add2 (call_8yy7Vayeck956sEidsuke9ns)\n",
-      " Call ID: call_8yy7Vayeck956sEidsuke9ns\n",
+      "  calculate_compound_interest (call_67AFIWypc9rH0HNQsS8nNp6Y)\n",
+      " Call ID: call_67AFIWypc9rH0HNQsS8nNp6Y\n",
       "  Args:\n",
-      "    a: 160000000\n",
-      "    b: -32000000\n",
-      "  add2 (call_4nX3s9xTwaj8COfepQ50F7H9)\n",
-      " Call ID: call_4nX3s9xTwaj8COfepQ50F7H9\n",
-      "  Args:\n",
-      "    a: 128000000\n",
-      "    b: 0\n",
+      "    principal: 66020000\n",
+      "    rate: 4\n",
+      "    years: 5\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: add2\n",
+      "Name: calculate_compound_interest\n",
       "\n",
-      "128000000\n",
+      "5년 후 원리금: 80,323,425원, 이자: 14,303,425원\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "세금을 계산하면 3,200만원이고, 남은 돈은 1억 2800만원입니다. 이 돈을 연 4% 복리로 5년간 예금하면 1억 6640만원이 됩니다.\n"
+      "연소득 8천만원일 때 세금으로 13,980,000원이 공제되어 세후 소득은 66,020,000원입니다. 이 금액을 연 4%의 복리 이율로 5년간 예금하면, 5년 후에는 총 80,323,425원이 됩니다. 따라서 5년 후의 예금 잔액은 80,323,425원이 됩니다.\n"
      ]
     }
    ],
    "source": [
+    "complex_questions = [\n",
+    "    \"1억원을 연 5% 복리로 10년 동안 예금하면 얼마가 될까?\",\n",
+    "    \"연소득 5천만원일 때 내야 할 세금은 얼마야?\",\n",
+    "    \"2024-12-25은 무슨 요일이야?\",\n",
+    "    \"연소득 8천만원일 때 세금을 계산하고, 남은 돈을 연 4% 복리로 5년간 예금하면 얼마가 돼?\"\n",
+    "]\n",
+    "\n",
     "for question in complex_questions:\n",
     "    for chunk in agent.stream({'messages': [HumanMessage(content=question)]}, stream_mode='values'):\n",
     "        chunk['messages'][-1].pretty_print()"
