--- a/src/mylangchain_app/05LangGraph/04_LangGraph_ReAct_Memory.ipynb
+++ b/src/mylangchain_app/05LangGraph/04_LangGraph_ReAct_Memory.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "sk\n",
-      "NY\n",
+      "WA\n",
       "tvly\n"
      ]
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,13 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "from langchain_community.vectorstores import FAISS\n",
-    "from langchain_core.messages import SystemMessage\n",
     "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
     "from langchain_core.tools import tool\n",
     "from langchain_community.tools import TavilySearchResults\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_upstage import UpstageEmbeddings\n",
@@ -76,7 +76,6 @@
     "\n",
     "# LangGraph MessagesState라는 미리 만들어진 상태를 사용\n",
     "from langgraph.graph import MessagesState\n",
-    "from langchain_core.documents import Document\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.prebuilt import ToolNode\n",
     "from langgraph.prebuilt import create_react_agent\n",
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,13 +219,13 @@
     "# 도구 목록\n",
     "tools = [search_menu, search_web]\n",
     "\n",
-    "# 모델에 도구를 바인딩\n",
+    "# 모델에 도구를 바인딩 RunnableBindings\n",
     "llm_with_tools = llm.bind_tools(tools=tools)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,10 +235,9 @@
       "{'refusal': None,\n",
       " 'tool_calls': [{'function': {'arguments': '{\"query\": '\n",
       "                                           '\"\\\\uc2a4\\\\ud14c\\\\uc774\\\\ud06c '\n",
-      "                                           '\\\\uba54\\\\ub274\\\\uc758 '\n",
-      "                                           '\\\\uac00\\\\uaca9\"}',\n",
+      "                                           '\\\\uba54\\\\ub274 \\\\uac00\\\\uaca9\"}',\n",
       "                              'name': 'search_menu'},\n",
-      "                 'id': 'chatcmpl-tool-588755e4eadc4e628575884de946003e',\n",
+      "                 'id': 'chatcmpl-tool-2d915a3dbd0a47118b3f900e4150e4a4',\n",
       "                 'type': 'function'}]}\n"
      ]
     }
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,9 +262,10 @@
      "text": [
       "{'refusal': None,\n",
       " 'tool_calls': [{'function': {'arguments': '{\"query\": \"2023-2024 recently '\n",
-      "                                           'released open-source LLM models\"}',\n",
+      "                                           'released open-source large '\n",
+      "                                           'language models\"}',\n",
       "                              'name': 'search_web'},\n",
-      "                 'id': 'chatcmpl-tool-db685cebd78c4799a4d1e54738c29c6d',\n",
+      "                 'id': 'chatcmpl-tool-2d1cdccd8d90459db0090ae9478d4912',\n",
       "                 'type': 'function'}]}\n"
      ]
     }
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -302,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AIMessage(content='3+3은 6입니다. 이 질문은 일반적인 수학 지식을 통해 답할 수 있으므로 함수 호출이 필요하지 않습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 596, 'total_tokens': 620, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': 'f0daed39-070b-4295-8094-1466cb518e5e', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--eb8bb7ee-bf42-4619-ae27-26c9eaeee84b-0', usage_metadata={'input_tokens': 596, 'output_tokens': 24, 'total_tokens': 620, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n"
+      "AIMessage(content='3+3은 6입니다. 이 질문은 일반적인 수학 지식을 사용하여 답할 수 있으므로 함수 호출이 필요하지 않습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 596, 'total_tokens': 620, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '7daaf33a-c916-4716-942a-e6e88faf8b4b', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--07a71628-49bd-4091-a8b9-f5995dcbdb2f-0', usage_metadata={'input_tokens': 596, 'output_tokens': 24, 'total_tokens': 620, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n"
      ]
     }
    ],
@@ -339,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -361,9 +360,10 @@
       "{'refusal': None,\n",
       " 'tool_calls': [{'function': {'arguments': '{\"query\": '\n",
       "                                           '\"\\\\uc2a4\\\\ud14c\\\\uc774\\\\ud06c '\n",
-      "                                           '\\\\uba54\\\\ub274 \\\\uac00\\\\uaca9\"}',\n",
+      "                                           '\\\\uba54\\\\ub274\\\\uc758 '\n",
+      "                                           '\\\\uac00\\\\uaca9\"}',\n",
       "                              'name': 'search_menu'},\n",
-      "                 'id': 'chatcmpl-tool-5bfe4af13d02488d94b3e2f12b3ae409',\n",
+      "                 'id': 'chatcmpl-tool-befe859da8834103808225c87884a566',\n",
       "                 'type': 'function'}]}\n"
      ]
     }
@@ -384,13 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'langchain_core.messages.tool.ToolMessage'>\n",
       "<Document source=\"../data/restaurant_menu.txt\"/>\n",
       "1. 시그니처 스테이크\n",
       "   • 가격: ₩35,000\n",
@@ -410,15 +411,6 @@
       "---\n",
       "\n",
       "<Document source=\"../data/restaurant_menu.txt\"/>\n",
-      "5. 가든 샐러드\n",
-      "   • 가격: ₩12,000\n",
-      "   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\n",
-      "   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.\n",
-      "</Document>\n",
-      "\n",
-      "---\n",
-      "\n",
-      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
       "2. 트러플 리조또\n",
       "   • 가격: ₩22,000\n",
       "   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\n",
@@ -428,10 +420,10 @@
       "---\n",
       "\n",
       "<Document source=\"../data/restaurant_menu.txt\"/>\n",
-      "3. 연어 타르타르\n",
-      "   • 가격: ₩18,000\n",
-      "   • 주요 식재료: 노르웨이산 생연어, 아보카도, 케이퍼, 적양파\n",
-      "   • 설명: 신선한 노르웨이산 생연어를 곱게 다져 아보카도, 케이퍼, 적양파와 함께 섞어 만든 타르타르입니다. 레몬 드레싱으로 상큼한 맛을 더했으며, 바삭한 브리오쉬 토스트와 함께 제공됩니다. 전채요리로 완벽한 메뉴입니다.\n",
+      "5. 가든 샐러드\n",
+      "   • 가격: ₩12,000\n",
+      "   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\n",
+      "   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.\n",
       "</Document>\n",
       "\n",
       "---\n",
@@ -442,55 +434,58 @@
       "   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\n",
       "   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.\n",
       "</Document>\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "6. 해산물 파스타\n",
+      "   • 가격: ₩24,000\n",
+      "   • 주요 식재료: 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스\n",
+      "   • 설명: 알 덴테로 삶은 링귀네 파스타에 신선한 해산물을 듬뿍 올린 메뉴입니다. 토마토 소스의 산미와 해산물의 감칠맛이 조화를 이루며, 마늘과 올리브 오일로 풍미를 더했습니다. 파슬리를 뿌려 향긋한 맛을 더합니다.\n",
+      "</Document>\n",
       "**** --------------------------- ****\n"
      ]
     }
    ],
    "source": [
     "# 도구 호출 결과를 메시지로 추가하여 실행 \n",
+    "# tool_call 변수는 RunnableBinding 객체 (LLM + tool)\n",
     "results = tool_node.invoke({\"messages\": [tool_call]})\n",
     "\n",
     "# 실행 결과 출력하여 확인 \n",
     "for result in results['messages']:\n",
+    "    print(type(result))\n",
     "    print(result.content)\n",
     "    print('**** --------------------------- ****')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Document href=\"https://www.eweek.com/artificial-intelligence/best-large-language-models/\"/>\n",
-      "The IBM Granite family of models is a fully open-source LLM released under the Apache v.2 license. The first iteration of these models debuted in May 2024, marking the beginning of an innovative, open-source AI solution for businesses. Following the initial release, Granite 3.0 was introduced in October 2024, followed by Granite 3.1 in December 2024. The latest version, Granite 3.2, was released in February 2025, incorporating new reasoning and vision capabilities into the existing Granite 3.1\n",
-      "</Document>\n",
-      "\n",
-      "---\n",
-      "\n",
-      "<Document href=\"https://blog.n8n.io/open-source-llm/\"/>\n",
-      "Falcon 3 is the latest iteration of open-source large language models developed by the Technology Innovation Institute (TII) in Abu Dhabi. This family of models demonstrates impressive performance for small LLMs while democratizing access to advanced AI by enabling efficient operation on light infrastructures, including laptops.\n",
-      "\n",
-      "⚙️\n",
-      "\n",
-      "Falcon 3 key features [...] Llama 3 is Meta’s latest generation of open-source large language models, offering high performance across a wide range of tasks. The latest Llama 3.3 70B model offers performance comparable to the 405B parameter model at a fraction of the computational cost, making it an attractive option for developers and researchers.\n",
-      "\n",
-      "⚙️\n",
-      "\n",
-      "Llama 3 key features [...] DeepSeek is a series of powerful open-source LLMs developed by DeepSeek AI, featuring innovative architectures for efficient inference and cost-effective training. The DeepSeek-V2 and V2.5 models are available for use with Ollama. While the recently released DeepSeek-V3 offers even more impressive capabilities with its 671B parameters, it is not yet available in Ollama at the moment of writing.\n",
-      "\n",
-      "⚙️\n",
-      "\n",
-      "DeepSeek key features\n",
-      "</Document>\n",
-      "\n",
-      "---\n",
-      "\n",
       "<Document href=\"https://explodingtopics.com/blog/list-of-llms\"/>\n",
-      "What is it?Pythia is a series of 16 large language models developed and released by EleutherAI, a non-profit AI research lab. There are eight different model sizes: 70M, 160M, 410M, 1B, 1.4B, 2.8B, 6.9B, and 12B. Because of Pythia's open-source license, these LLMs serve as a base model for fine-tuned, instruction-following LLMs like Dolly 2.0 by Databricks.\n",
+      "Command R Cohere Mar 11, 2024 API, Open Source 35B\n",
+      "Inflection-2.5 Inflection AI Mar 7, 2024 Proprietary Unknown (predecessor ~400B)\n",
+      "Gemma Google DeepMind Feb 21, 2024 API, Open Source 2B, 7B\n",
+      "Gemini 1.5 Google DeepMind Feb 15, 2024 API~1.5T Pro, ~8B Flash (est.)\n",
+      "Stable LM 2 Stability AI Jan 19, 2024 Open Source 1.6B, 12B\n",
+      "Grok-1 xAI Nov 4, 2023 API, Open Source 314 billion\n",
+      "Mistral 7B Mistral AI Sept 27, 2023 Open Source 7.3 billion [...] Developer:AI21 Labs\n",
+      "\n",
+      "Release date:March 29, 2024\n",
+      "\n",
+      "Number of Parameters:52 billion\n",
+      "\n",
+      "Context Window (Tokens):8,192\n",
+      "\n",
+      "Knowledge Cutoff Date: Mid 2023\n",
+      "\n",
+      "What is it?AI21 Labs created Jamba, the world's first production-grade Mamba-style large language model. It integrates SSM technology with elements of a traditional transformer model to create a hybrid architecture. The model is efficient and highly scalable, with a context window of 256K and deployment support of 140K context on a single GPU. [...] What is it?Pythia is a series of 16 large language models developed and released by EleutherAI, a non-profit AI research lab. There are eight different model sizes: 70M, 160M, 410M, 1B, 1.4B, 2.8B, 6.9B, and 12B. Because of Pythia's open-source license, these LLMs serve as a base model for fine-tuned, instruction-following LLMs like Dolly 2.0 by Databricks.\n",
       "\n",
       "### 21. Alpaca 7B\n",
       "\n",
@@ -500,27 +495,31 @@
       "\n",
       "Release date: March 27, 2024\n",
       "\n",
-      "Number of Parameters:7 billion [...] Llama 4 Scout delivers greater factual accuracy and broader general knowledge. Meta has also expanded its multilingual capabilities, adding support for eight more languages. This model now stands as the largest open-source release from Meta to date.\n",
+      "Number of Parameters:7 billion\n",
+      "</Document>\n",
       "\n",
-      "Earlier models, including Llama 2, remain available in 7B, 13B, and 70B variants for developers needing lighter-weight options.\n",
+      "---\n",
       "\n",
-      "### 12. Mixtral 8x22B\n",
+      "<Document href=\"https://www.datacamp.com/blog/top-open-source-llms\"/>\n",
+      "Released on July 23, 2024, LLaMA 3.1 includes models with 8B, 70B, and for the first time, 405B parameters, making it the largest in the series. These models have been designed to handle a variety of natural language processing tasks across multiple languages including English, Spanish, Portuguese, German, Thai, French, Italian, and Hindi. [...] With open-source LLM, researchers have more chances to know about this information, which can open the door for new improvements designed to reduce the environmental footprint of AI.\n",
       "\n",
-      "Image 17: undefined\n",
+      "9 Top Open-Source Large Language Models For 2024\n",
       "\n",
-      "Developer:Mistral AI\n",
+      "### 1. LLaMA 3.1\n",
       "\n",
-      "Release date: April 10, 2024 [...] What is it?XGen-7B is a large language model from Salesforce with 7 billion parameters and an 8k context window. The model was trained on 1.37 trillion tokens from various sources, such as RedPajama, Wikipedia, and Salesforce's own Starcoder dataset.\n",
+      "Image 2\n",
       "\n",
-      "Salesforce has released two open-source versions, a 4,000 and 8,000 token context window base, hosted under an Apache 2.0 license.\n",
+      "Most top players in the LLM space have opted to build their LLM behind closed doors. However, Meta continues to be an exception with its series of open-source LLMs, which now includes the latest LLaMA 3.1. [...] Released by the Technology Innovation Institute of the United Arab Emirates in September 2023, Falcon 180B is being trained on 180 billion parameters and 3.5 trillion tokens. With this impressive computing power, Falcon 180B has already outperformed LLaMA 2 and GPT-3.5 in various NLP tasks, and Hugging Face suggests it can rival Google’s PaLM 2, the LLM that powers Google Bard.\n",
+      "</Document>\n",
       "\n",
-      "### 19. DBRX\n",
+      "---\n",
       "\n",
-      "Image 24: undefined\n",
-      "\n",
-      "Developer: Databricks' Mosaic ML\n",
-      "\n",
-      "Release date:March 27, 2024\n",
+      "<Document href=\"https://en.wikipedia.org/wiki/List_of_large_language_models\"/>\n",
+      "| Claude 3 \"Claude (language model)\") | March 2024 | Anthropic | Unknown | Unknown | Unknown | Proprietary | Includes three models, Haiku, Sonnet, and Opus.( |\n",
+      "| DBRX | March 2024 | Databricks and Mosaic ML | 136 | 12T tokens | Unknown | Databricks Open Model License( | Training cost 10 million USD | [...] | Claude 3.5 \"Claude (language model)\") | June 2024 | Anthropic | Unknown | Unknown | Unknown | Proprietary | Initially, only one model, Sonnet, was released.( In October 2024, Sonnet 3.5 was upgraded, and Haiku 3.5 became available.( |\n",
+      "| Llama 3.1 | July 2024 | Meta AI | 405 | 15.6T tokens | 440,000 | Llama 3 license#Licensing \"Llama (language model)\") | 405B version took 31 million hours on H100 \"Hopper (microarchitecture)\")-80GB, at 3.8E25 FLOPs.( | [...] | Mixtral 8x22B | April 2024 | Mistral AI | 141 | Unknown | Unknown | Apache 2.0 | ( |\n",
+      "| DeepSeek-LLM | November 29, 2023 | DeepSeek | 67 | 2T tokens( table 2 | 12,000 | DeepSeek License | Trained on English and Chinese text. 1e24 FLOPs for 67B. 1e23 FLOPs for 7B( figure 5 |\n",
+      "| Phi-2&action=edit&redlink=1 \"Phi (LLM) (page does not exist)\") | December 2023 | Microsoft | 2.7 | 1.4T tokens | 419( | MIT | Trained on real and synthetic \"textbook-quality\" data, for 14 days on 96 A100 GPUs.( |\n",
       "</Document>\n",
       "\n"
      ]
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -725,8 +724,9 @@
    ],
    "source": [
     "from IPython.display import Image, display\n",
-    "from langgraph.prebuilt import create_react_agent\n",
+    "#from langgraph.prebuilt import create_react_agent\n",
     "\n",
+    "tools = [search_menu, search_web]\n",
     "graph = create_react_agent(\n",
     "    llm, \n",
     "    tools=tools, \n",
@@ -6241,7 +6241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
